<resources>
    <string name="app_name">Health Arena</string>
    <string name="web_server_id">473903871123-si55rm2gslbmh96oafnsluomj70ovki4.apps.googleusercontent.com</string>
    <!-- Login Screen Resources-->
    <string name="login_title">Health Arena</string>
    <string name="sign_in_button">Sign In With Google</string>
    <string name="login_in_with_google">Login in with Google</string>
    <string name="user_consent">Please Note: By Logging into this Application, \n You are giving consent to monitor your data to keep track of your health and suggest some health insurance.</string>



    <string name="next">Next</string>
    <string name="edittext_hint">Enter your gaming name here.</string>
    <!-- Calendar Resources -->
    <string name="calendar_title">On which date you came \nalive to this Earth!!</string>

    <!-- BMI Resources-->
    <string name="bmi_title">BMI Calculator</string>
    <string name="height_title">Height</string>
    <string name="height_unit"><U>%1$d</U> cms.</string>
    <string name="weight_title">Weight</string>
    <string name="weight_unit"><U>%1$d</U> kg</string>
    <string name="bmi_button_text">Submit</string>
    <string name="bmi_result_text">Your BMI index</string>


    <!-- Congrats Resources-->
    <string name="congrats_title">Congratulations</string>
    <string name="congrats_quote">Pat Yourself !!</string>

    <!-- Scratch View -->
    <string name="scratch_view_title">Scratch card &amp; Discover Badge</string>
    <string name="next_level_button">Next Level</string>
    <string name="family_question">Tell me about you and yours \n family aliments</string>
    <string name="disease_pick">Choose the diseases you have</string>
    <string name="medical_history_tree">Medical History Tree</string>
    <string name="healthcare_plans">HealthCare Plans</string>
    <string name="connect">Connect</string>
    <string name="total_health_points">Total Health Points</string>
    <string name="use_coins">Use coins</string>
    <string name="abstinence">Abstinence</string>

</resources>
