<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary">

    <ImageView
        android:id="@+id/app_icon"
        android:layout_width="84dp"
        android:layout_height="84dp"
        android:layout_gravity="center"
        android:layout_margin="16dp"
        android:layout_marginTop="64dp"
        android:src="@drawable/ic_logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/title_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/app_name"
        android:textColor="@color/colorOnPrimary"
        android:textSize="24sp"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="@id/app_icon"
        app:layout_constraintStart_toStartOf="@id/app_icon"
        app:layout_constraintTop_toBottomOf="@id/app_icon" />

    <TextView
        android:id="@+id/login_hint_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_in_with_google"
        android:textColor="@color/colorOnPrimary"
        android:textSize="24sp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.gms.common.SignInButton
        android:id="@+id/button_sign_in"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/sign_in_button"
        android:textColor="@color/colorOnPrimary"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="@id/login_hint_text_view"
        app:layout_constraintStart_toStartOf="@id/login_hint_text_view"
        app:layout_constraintTop_toBottomOf="@id/login_hint_text_view" />
</androidx.constraintlayout.widget.ConstraintLayout>