<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/bmi_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bmi_title"
        android:textSize="20sp"
        android:textStyle="bold"
        android:fontFamily="@font/lato_regular"
        android:textColor="#331E68"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.1"/>

    <TextView
        android:id="@+id/height_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/height_title"
        android:textSize="16sp"
        android:fontFamily="@font/lato_regular"
        android:textColor="#331E68"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/bmi_title"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.1"
        app:layout_constraintHorizontal_bias="0.1"/>

    <com.kevalpatel2106.rulerpicker.RulerValuePicker
        android:id="@+id/height_ruler"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:background="@color/color_scratch"
        app:indicator_color="#331E68"
        app:indicator_interval="14dp"
        app:max_value="250"
        app:min_value="100"
        app:notch_color="#331E68"
        app:ruler_text_size="6sp"
        app:layout_constraintTop_toBottomOf="@id/height_title"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintVertical_bias="0.05"/>

    <TextView
        android:id="@+id/height_display"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="14sp"
        android:textColor="@color/colorPrimary"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/height_ruler"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.1"
        tools:text="@string/height_unit"/>

    <TextView
        android:id="@+id/weight_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/weight_title"
        android:textSize="16sp"
        android:fontFamily="@font/lato_regular"
        android:textColor="#331E68"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/height_display"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.1"
        app:layout_constraintHorizontal_bias="0.1"/>

    <com.kevalpatel2106.rulerpicker.RulerValuePicker
        android:id="@+id/weight_ruler"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:background="@color/color_scratch"
        app:indicator_color="#331E68"
        app:indicator_interval="8dp"
        app:max_value="150"
        app:min_value="30"
        app:notch_color="#331E68"
        app:ruler_text_size="6sp"
        app:layout_constraintTop_toBottomOf="@id/weight_title"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintVertical_bias="0.05"/>

    <TextView
        android:id="@+id/weight_display"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="14sp"
        android:textColor="@color/colorPrimary"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/weight_ruler"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.1"
        tools:text="@string/weight_unit"/>

    <ImageButton
        android:id="@+id/bmi_submit_button"
        style="@style/RoundedButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_rounded_arrow_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/weight_display"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.5"/>

</androidx.constraintlayout.widget.ConstraintLayout>