<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/transparent">

    <ImageView
        android:id="@+id/congrats_logo"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@drawable/ic_congrats_emoji"
        android:elevation="10dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintVertical_bias="0.1"/>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/bmi_card_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/bmi_result_alert_dialog"
        android:layout_marginTop="50dp"
        android:paddingLeft="50dp"
        android:paddingRight="50dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/congrats_logo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.2">

        <TextView
            android:id="@+id/congrats_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="30sp"
            android:layout_margin="10dp"
            android:text="@string/congrats_title"
            android:textColor="@color/color_congrats"
            android:fontFamily="@font/montserrat"
            android:textStyle="bold"
            android:textAlignment="center"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@id/congrats_quote"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/congrats_quote"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/congrats_quote"
            android:textSize="20sp"
            android:textAlignment="center"
            android:textColor="@color/color_congrats"
            android:fontFamily="@font/montserrat"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@id/congrats_title"
            app:layout_constraintBottom_toTopOf="@id/coin_shower_view"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />


        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/coin_shower_view"
            android:layout_width="200dp"
            android:layout_height="200dp"
            app:layout_constraintTop_toBottomOf="@id/congrats_quote"
            app:layout_constraintBottom_toTopOf="@id/points_text_view"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>


        <ImageView
            android:id="@+id/coin_image_view"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_margin="50dp"
            android:background="@android:color/transparent"
            android:elevation="10dp"
            android:src="@drawable/ic_coins_group"
            app:layout_constraintBottom_toTopOf="@id/points_text_view"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/congrats_quote" />

        <TextView
            android:id="@+id/points_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="@string/bmi_result_text"
            android:layout_margin="20dp"
            android:textSize="20sp"
            android:textColor="@color/colorPrimary"
            android:fontFamily="@font/montserrat"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@id/coin_image_view"
            app:layout_constraintBottom_toTopOf="@id/congrats_suggestion"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>


        <TextView
            android:id="@+id/congrats_suggestion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="@string/bmi_result_text"
            android:layout_margin="30dp"
            android:textSize="20sp"
            android:textAlignment="center"
            android:textColor="@color/colorPrimary"
            android:fontFamily="@font/montserrat"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@id/points_text_view"
            app:layout_constraintBottom_toTopOf="@id/bmi_congrats_continue_button"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <ImageButton
            android:id="@+id/bmi_congrats_continue_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:src="@drawable/ic_rounded_arrow_button"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/congrats_suggestion"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>