<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/parent_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp">

    <androidx.cardview.widget.CardView
        android:id="@+id/bottom_card_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        app:cardCornerRadius="8dp"
        app:layout_constraintBottom_toBottomOf="@id/top_card_view"
        app:layout_constraintEnd_toEndOf="@id/top_card_view"
        app:layout_constraintStart_toStartOf="@id/top_card_view"
        app:layout_constraintTop_toTopOf="@id/top_card_view">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="8dp">

            <TextView
                android:id="@+id/health_points_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/ubuntu_r"
                android:text="@string/total_health_points"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/points_count_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:drawableStart="@drawable/ic_coin"
                android:fontFamily="@font/ubuntu_r"
                app:layout_constraintStart_toStartOf="@id/health_points_text_view"
                app:layout_constraintTop_toBottomOf="@id/health_points_text_view"
                tools:text=" 123" />

            <TextView
                android:id="@+id/use_coins_hint"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/ubuntu_r"
                android:text="@string/use_coins"
                app:layout_constraintEnd_toStartOf="@+id/reduced_premium_text"
                app:layout_constraintStart_toEndOf="@id/health_points_text_view"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageButton
                android:id="@+id/remove_coins"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="?attr/selectableItemBackground"
                android:src="@drawable/ic_baseline_remove_24"
                app:layout_constraintBottom_toBottomOf="@id/chip_coin_count"
                app:layout_constraintEnd_toStartOf="@id/chip_coin_count"
                app:layout_constraintStart_toStartOf="@id/use_coins_hint"
                app:layout_constraintTop_toBottomOf="@id/use_coins_hint" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chip_coin_count"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:text="100"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/add_coins"
                app:layout_constraintStart_toEndOf="@id/remove_coins"
                app:layout_constraintTop_toBottomOf="@id/use_coins_hint" />

            <ImageButton
                android:id="@+id/add_coins"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="?attr/selectableItemBackground"
                android:src="@drawable/ic_baseline_add_24"
                app:layout_constraintBottom_toBottomOf="@id/chip_coin_count"
                app:layout_constraintEnd_toEndOf="@+id/use_coins_hint"
                app:layout_constraintStart_toEndOf="@id/chip_coin_count"
                app:layout_constraintTop_toTopOf="@+id/chip_coin_count" />

            <TextView
                android:id="@+id/reduced_premium_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:layout_marginEnd="8dp"
                android:fontFamily="@font/ubuntu_r"
                android:textAlignment="viewEnd"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/top_card_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:backgroundTint="#7284E8"
        app:cardCornerRadius="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/policy_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:fontFamily="@font/ubuntu_r"
                android:textColor="#ffffff"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="Insure your Family members" />

            <TextView
                android:id="@+id/premium_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:fontFamily="@font/ubuntu_r"
                android:textAlignment="viewEnd"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="Premium \nRs 4837" />

            <TextView
                android:id="@+id/sum_assured_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:fontFamily="@font/ubuntu_r"
                android:textColor="#ffffff"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/policy_title"
                tools:text="Sum assured" />

            <TextView
                android:id="@+id/policy_term_period_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:fontFamily="@font/ubuntu_r"
                android:text="Policy Term"
                android:textColor="#ffffff"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/premium_text_view" />

            <Button
                android:id="@+id/connect_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:backgroundTint="#ffffff"
                android:text="@string/connect"
                android:textColor="#000000"
                android:textSize="12sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/policy_term_period_text" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="#ffffff"
                android:text="Know More"
                android:textColor="#000000"
                android:textSize="12sp"
                app:layout_constraintBottom_toBottomOf="@id/connect_button"
                app:layout_constraintEnd_toStartOf="@id/connect_button"
                app:layout_constraintStart_toEndOf="@id/isUsingCoinsView"
                app:layout_constraintTop_toTopOf="@id/connect_button" />

            <CheckBox
                android:id="@+id/isUsingCoinsView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="User health points"
                android:textColor="#ffffff"
                android:textSize="12sp"
                app:layout_constraintBottom_toBottomOf="@id/connect_button"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/connect_button" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>


</androidx.constraintlayout.widget.ConstraintLayout>